<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/behavior_main_header">
        <com.cnews.guji.smart.helper.linearlayout.NestedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!--背景-->
                <!--<ImageView
                    android:id="@+id/back_ima"
                    android:layout_width="match_parent"
                    android:src="#80000000"
                    android:background="@mipmap/avtar_header_b"
                    android:scaleType="center"
                    android:layout_height="match_parent" />-->
                <ImageView
                    android:id="@+id/back_ima"
                    android:layout_width="match_parent"
                    android:src="@mipmap/avtar_header_b"
                    android:scaleType="fitXY"
                    android:layout_height="match_parent" />
                <!--设置-->
                <RelativeLayout
                    android:id="@+id/rlbackArrow"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/backArrow"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_arrow_back_light"/>
                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/header_menu"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:padding="15dp"
                        app:srcCompat="@mipmap/index_head_setting" />
                </RelativeLayout>
                <!--个人信息-->
                <LinearLayout
                    android:id="@+id/llHeaderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:layout_marginTop="25dp"
                    android:paddingLeft="@dimen/dp_15"
                    android:orientation="horizontal">
                    <com.cnews.guji.smart.helper.imageview.ExpandImageView
                        android:id="@+id/article_img1"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        fresco:placeholderImage="@mipmap/place_image_default"
                        fresco:roundAsCircle="true"/>
                    <!--<ImageView
                        android:id="@+id/headerImg"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/avtar_header_b" />-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:paddingRight="@dimen/dp_10"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:text="丁成磊"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_10"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="@dimen/dp_18"
                                android:gravity="center"
                                android:paddingBottom="2dp"
                                android:paddingLeft="3dp"
                                android:paddingRight="3dp"
                                android:textColor="@color/white"
                                android:background="@drawable/bg_diacount_clear"
                                android:textSize="8sp"
                                android:text="娱乐控"/>
                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="@dimen/dp_18"
                                android:gravity="center"
                                android:layout_marginLeft="@dimen/dp_5"
                                android:paddingBottom="2dp"
                                android:paddingLeft="3dp"
                                android:paddingRight="3dp"
                                android:textColor="@color/white"
                                android:background="@drawable/bg_diacount_clear"
                                android:textSize="8sp"
                                android:text="宠物"/>
                            <TextView
                                android:layout_width="40dp"
                                android:layout_height="@dimen/dp_18"
                                android:gravity="center"
                                android:layout_marginLeft="@dimen/dp_5"
                                android:paddingBottom="2dp"
                                android:paddingLeft="3dp"
                                android:paddingRight="3dp"
                                android:textColor="@color/white"
                                android:background="@drawable/bg_diacount_clear"
                                android:textSize="8sp"
                                android:text="电影"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/dp_18"
                                android:gravity="center"
                                android:layout_marginLeft="@dimen/dp_5"
                                android:paddingBottom="2dp"
                                android:paddingLeft="3dp"
                                android:paddingRight="3dp"
                                android:textColor="@color/white"
                                android:background="@drawable/bg_diacount_clear"
                                android:textSize="8sp"
                                android:text="耽美爱好者"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_marginTop="@dimen/dp_5"
                            android:ellipsize="end"
                            android:lines="1"
                            android:textSize="12sp"
                            android:text="如果生活没有让你笑出来，那是因为你没有读懂这个笑话"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llHeaderName"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">
                </LinearLayout>
            </RelativeLayout>
        </com.cnews.guji.smart.helper.linearlayout.NestedLinearLayout>
    </FrameLayout>

    <!--折叠隐现布局-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/title_bg_red"
        app:layout_behavior="@string/behavior_xiami_title">
        <com.cnews.guji.smart.helper.imageview.ExpandImageView
            android:id="@+id/collapseHeaderIco"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="28dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            fresco:placeholderImage="@mipmap/place_image_default"
            fresco:roundAsCircle="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/xiami_title_height"
            android:text="关注"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:textStyle="bold"/>
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/collapse_menu"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="35dp"
            android:layout_alignParentRight="true"
            app:srcCompat="@mipmap/index_head_setting" />
      <!--  <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/xiami_title_height"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/xiami_title" />-->

    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/comment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="always"
        android:background="@color/white"
        app:layout_behavior="@string/behavior_xiami_comment"/>

    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/comment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:overScrollMode="never"
        app:layout_behavior="@string/behavior_xiami_comment" />-->

</android.support.design.widget.CoordinatorLayout>
